--- a/style.css
+++ b/style.css
@@ -12,13 +12,14 @@ body {
 .quiz-container {
     width: 80%;
     text-align: center;
-    color: white;
+    color: cyan; /* Question text now cyan */
     position: relative;
 }
 
 h1 {
     font-size: 2.5em;
     margin-bottom: 20px;
+    color: cyan; /* Question text now cyan */
 }
 
 .line-timer {
@@ -51,23 +52,36 @@ h1 {
     display: flex;
     align-items: center;
     width: 45%;
-    background-color: #00FFFF;
-    color: black;
-    text-align: left;
-    padding: 15px;
-    border: 2px solid black;
-    font-size: 1.2em;
     cursor: pointer;
+    border: 2px solid black;
+    background-color: transparent;
 }
 
 .option-key {
     width: 50px;
-    text-align: center;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-weight: bold;
+    font-size: 1.5em;
+    color: black;
+    background-color: cyan; /* Cyan box for ABCD */
+    border-radius: 5px;
+}
+
+.option-text {
+    background-color: white; /* White rectangle box for options */
+    flex: 1;
+    text-align: left;
+    padding: 15px;
+    margin-left: 10px;
+    color: black; /* Text color inside option box */
+    border-radius: 5px;
+    font-size: 1.2em;
 }
 
 .option:hover {
-    background-color: #00DDDD;
     transform: scale(1.05);
     transition: transform 0.3s;
 }
